@@ -79,7 +79,8 @@ void o_circle_draw(TOPLEVEL *w_current, OBJECT *o_current)
   world_get_circle_bounds(w_current, o_current->circle,
                           &wleft, &wtop, &wright, &wbottom);
 	
-  if (!visible(w_current, wleft, wtop, wright, wbottom)) {
+  if ( (w_current->DONT_REDRAW == 1) || 
+       (!visible(w_current, wleft, wtop, wright, wbottom)) ) {
     return;
   }
 	
