@@ -56,7 +56,8 @@ void o_net_draw(TOPLEVEL *w_current, OBJECT *o_current)
   o_net_recalc(w_current, o_current);
 
   /* reuse line's routine */
-  if (!o_line_visible(w_current, o_current->line, &x1, &y1, &x2, &y2)) {
+  if ( (w_current->DONT_REDRAW == 1) || 
+       (!o_line_visible(w_current, o_current->line, &x1, &y1, &x2, &y2)) ) {
     return;
   }
 
